@@ -90,6 +90,7 @@ AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_CC_STDC
 AC_C_CONST
+AC_C_RESTRICT
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_LN_S
