@@ -447,13 +447,13 @@ vips__interpolate_init( void )
 {
 	extern GType vips_interpolate_bicubic_get_type( void );
 	extern GType vips_interpolate_yafrsmooth_get_type( void );
-	extern GType vips_interpolate_nohalo_get_type( void );
+	extern GType vips_interpolate_nohalo1_get_type( void );
 
 	vips_interpolate_nearest_get_type();
 	vips_interpolate_bilinear_get_type();
 	vips_interpolate_bicubic_get_type();
 	vips_interpolate_yafrsmooth_get_type();
-	vips_interpolate_nohalo_get_type();
+	vips_interpolate_nohalo1_get_type();
 }
 
 /* Make an interpolator from a nickname.
